--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ actix-web="4.0.0"
 pin-project = "1"
 futures = "0.3"
 futures-util = "0.3"
+serde="1"
 
 [dependencies.resp-result]
 version="0.1"
