--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "request-pretreat"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["FrozenString<frozenstringstable@gmail.com>"]
 description = "Request Pretreatment for Actix"
 homepage = "https://github.com/Enraged-Dun-Cookie-Development-Team/req-pretreatment"
-documentation = "https://docs.rs/resp-result"
+documentation = "https://docs.rs/request-pretreat"
 license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
